--- a/cs305/d21objects/books.html
+++ b/cs305/d21objects/books.html
@@ -23,11 +23,16 @@
     </p>
 
     <input type="button" value="Add book to library" id="addBtn" onclick="addBookToLibrary();"/>
+    <input type="button" value="show Authors" id="addBtn" onclick="showAuthors();"/>
+    <input type="button" value="Show id" id="addBtn" onclick="showIds();"/>
     <input type="button" value="Show titles" id="titlesBtn" onclick="showTitles();"/>
     <input type="button" value="Scramble" id="scrambleBtn" onclick="scramble();"/>
 
     <p>
-        <textarea id="displayArea" rows="10" cols="80"></textarea>
+        <textarea id="displayAreaTitle" rows="10" cols="80"></textarea>
+        <textarea id="displayAreaId" rows="10" cols="80"></textarea>
+        <textarea id="displayAreaAuthor" rows="10" cols="80"></textarea>
+        <textarea id="displayScrumble" rows="10" cols="80"></textarea>
     </p>
 
 </body>
